[gd_scene load_steps=4 format=3 uid="uid://diotdey85ekaf"]

[ext_resource type="Script" path="res://menu.gd" id="1_aqjkk"]
[ext_resource type="FontFile" uid="uid://33wrqlov6mqd" path="res://Fonts/the-end-font/TheEndFont(RF).ttf" id="1_ud606"]
[ext_resource type="Texture2D" uid="uid://bfyliqp4art57" path="res://GFX/PostersAndPNGs/BG.png" id="2_uqxxt"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_aqjkk")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -216.0
offset_top = -120.0
offset_right = 1704.0
offset_bottom = 960.0
scale = Vector2(0.8, 0.8)
texture = ExtResource("2_uqxxt")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 64.0
offset_right = 1216.0
offset_bottom = 256.0
theme_override_fonts/font = ExtResource("1_ud606")
theme_override_font_sizes/font_size = 130
text = "Janitory Activity"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 256.0
offset_right = 576.0
offset_bottom = 704.0
theme_override_constants/separation = 25
alignment = 1

[node name="BtnPlay" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "Play"

[node name="BtnOptions" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "Options"

[node name="BtnCredits" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "Credits
"

[node name="BtnExit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "Exit"

[node name="LblVersion" type="Label" parent="."]
layout_mode = 0
offset_left = 1136.0
offset_top = 686.0
offset_right = 1272.0
offset_bottom = 712.0
pivot_offset = Vector2(56, 16)
text = "Version 1.1"
horizontal_alignment = 2

[connection signal="pressed" from="VBoxContainer/BtnPlay" to="." method="_on_btn_play_pressed"]
[connection signal="pressed" from="VBoxContainer/BtnOptions" to="." method="_on_btn_options_pressed"]
[connection signal="pressed" from="VBoxContainer/BtnCredits" to="." method="_on_btn_credits_pressed"]
[connection signal="pressed" from="VBoxContainer/BtnExit" to="." method="_on_btn_exit_pressed"]
